add Getter "/checkName" and "/checkEmail"